--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Welcome to Daniel Repository
+description: Feel free to bookmark this to keep an eye on my projects update
