--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-cayman
 title: DANIEL DIAZ
 description: Feel free to bookmark this to keep an eye on my projects update
