--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-leap-day
-title: DANIEL DIAZ
-description: Feel free to bookmark this to keep an eye on my projects update
+title: DANIEL DIAZ PERSONAL WEBPAGE
